# rpc_project_HuiShi

./: .gitignore  LICENSE.md  README.md  TODO.TXT  py.loginfo(f"Finished executing plan.")
edo/: CMakeLists.txt  edo_edo_moveit_ikfast_plugin_description.xml  package.xml  plugin.xml  setup.py
edo/config/: controllers.yaml  edo.srdf  kinematics.yaml
edo/launch/: controller_utils.launch  edo.launch  edo.world  edo_gazebo.launch  edo_gripper_dummy_upload.launch  edo_moveit_controller_manager.launch.xml  edo_world.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
edo/meshes/collision/: off_center_link_0.dae
edo/meshes/visual/: cilinder.dae  cylinder.dae
edo/models/box/: box.config  box.sdf
edo/resource/: form.ui  joint_trajectory_controller.ui
edo/scripts/: edo_gripper_node.py  edo_gui  main.py
edo/src/: edo_console.py  edo_edo_ikfast_moveit_plugin.cpp  edo_gripper_node.py  edo_move_group_interface.py  edo_utils.py  main.py
edo/src/edo_gui/: edo_gui.py  edo_gui_widget.py
edo/src/gazebo_grasp_fix_plugin/: GazeboGraspFix.cpp  GazeboGraspGripper.cpp  GazeboVersionHelpers.cpp
edo/src/rqt_joint_trajectory_controller/: double_editor.py  joint_trajectory_controller.py
edo/urdf/: box.urdf  cilinder.urdf  cylinder.urdf  edo.gazebo.xacro  edo.urdf.xacro  edo.xacro  edo_gripper_dummy.urdf.xacro  edo_gripper_dummy.xacro  pick_box.xacro  sphere.urdf
edo_edo_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
edo_edo_ikfast_plugin/src/: edo_edo_ikfast_solver.cpp
