<?xml version="1.0"?>
<package format="2">
  <name>edo</name>
  <version>1.0.0</version>
  <description>Package implementing a MoveIt! MoveGroupInterface for the control of a Comau eDo robotic arm.</description>

  <maintainer email="lorenzo.busellato_02@studenti.univr.it">Lorenzo Busellato</maintainer>
  <maintainer email="michel.valentini@studenti.univr.it">Michel Valentini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>gazebo_version_helpers</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_version_helpers</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <moveit_core plugin="${prefix}/edo_edo_moveit_ikfast_plugin_description.xml"/>
  </export>
</package>
